package utility;

import core.Item;

public interface GuestActions {
    public void putSoap();
    public void useSoap(Item item);
    public void saveMoney();

}
