package utility;

public enum ItemStatus {
    NEW,
    OLD,
    USED,
    BROKEN
}
