package utility;

public interface LightActions {
    public void turnOffLight();
    public void turnOnLight();
}
