package utility;

public enum LightingTypeStatus {
    LED,
    BRIGHT,
    SOFT,
    FLUORESCENT
}
